# zip_cracker

./: .gitignore  Cargo.toml  LICENSE  README.md  dictionary.txt
.github/workflows/: release.yml
examples/: basic_usage.rs
src/: archive.rs  charset.rs  cli.rs  lib.rs  main.rs  passwords.rs  zip_utils.rs
src/archive/: common.rs  mod.rs  rar.rs  sevenz.rs  zip.rs
src/attack/: bruteforce.rs  dictionary.rs  mod.rs
