[package]
name = "archive_cracker"
version = "0.1.5"
edition = "2024"

[lib]
name = "archive_cracker"
path = "src/lib.rs"

[[bin]]
name = "archive_cracker"
path = "src/main.rs"

[dependencies]
zip = "8.1"
rayon = "1.10"
num_cpus = "1.16"
infer = "0.19"                # 文件类型检测库
clap = { version = "4.5", features = ["derive"] }  # 命令行参数解析
dirs = "6.0"                  # 获取用户目录
sevenz-rust = { version = "0.6", features = ["aes256"] }  # 7z 支持

[profile.release]
opt-level = 3
lto = true
